@@ -9,13 +9,13 @@
   <property category="sys" name="CheckStable" value="1" />
   <property category="sys" name="Company" value="" />
   <property category="sys" name="Copyright" value="Copyright (c) 2001" />
-  <property category="sys" name="DefaultPackage" value="org.postgresql" />
+  <property category="sys" name="DefaultPackage" value="org.postgresql.test.jdbc2" />
   <property category="sys" name="Description" value="" />
   <property category="sys" name="DocPath" value="doc" />
   <property category="sys" name="ExcludeClassEnabled" value="0" />
   <property category="sys" name="JDK" value="java 1.3.0-C" />
   <property category="sys" name="LastTag" value="0" />
-  <property category="sys" name="Libraries" value="" />
+  <property category="sys" name="Libraries" value="JUnit" />
   <property category="sys" name="MakeStable" value="0" />
   <property category="sys" name="OutPath" value="build" />
   <property category="sys" name="SourcePath" value="." />
